--- a/BeOnTime-iOSApp/Base.lproj/Main.storyboard
+++ b/BeOnTime-iOSApp/Base.lproj/Main.storyboard
@@ -190,10 +190,10 @@
             </objects>
             <point key="canvasLocation" x="1389" y="179"/>
         </scene>
-        <!--View Controller-->
+        <!--Client Shift View Controller-->
         <scene sceneID="dTY-JO-XG4">
             <objects>
-                <viewController id="eD8-hk-c7d" sceneMemberID="viewController">
+                <viewController id="eD8-hk-c7d" customClass="ClientShiftViewController" customModule="BeOnTime_iOSApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fnh-Ts-yr2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -244,7 +244,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="4yf-1J-KxF">
-                                <rect key="frame" x="140" y="106" width="130" height="40"/>
+                                <rect key="frame" x="97" y="106" width="190" height="40"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="545943629.14056301">
                                     <!--2018-04-20 19:00:29 +0000-->
@@ -272,6 +272,9 @@
                                 <state key="normal" title="SEARCH SHIFT">
                                     <color key="titleColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnSearch:" destination="eD8-hk-c7d" eventType="touchUpInside" id="gOi-rz-mQS"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rate for Worker's Shift" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmX-r5-Md3">
                                 <rect key="frame" x="53" y="77" width="242" height="21"/>
@@ -281,7 +284,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="yab-Ma-Wfw">
-                                <rect key="frame" x="140" y="148" width="132" height="51"/>
+                                <rect key="frame" x="97" y="148" width="190" height="51"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="545943629.14056301">
                                     <!--2018-04-20 19:00:29 +0000-->
@@ -294,6 +297,9 @@
                                 <state key="normal" title="Re-login">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnLogout:" destination="eD8-hk-c7d" eventType="touchUpInside" id="lZL-iV-Hm2"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Start Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dfl-xa-deq">
                                 <rect key="frame" x="15" y="116" width="98" height="21"/>
@@ -315,10 +321,10 @@
             </objects>
             <point key="canvasLocation" x="1357.5" y="880.9859154929577"/>
         </scene>
-        <!--Details View Controller-->
+        <!--Client Shift Details View Controller-->
         <scene sceneID="SOy-lA-Jpv">
             <objects>
-                <viewController storyboardIdentifier="DetailsViewController" id="NYe-T2-3v5" customClass="DetailsViewController" customModule="BeOnTime_iOSApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailsViewController" id="NYe-T2-3v5" customClass="ClientShiftDetailsViewController" customModule="BeOnTime_iOSApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="odh-Hy-ibr">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
