--- a/BeOnTime-iOSApp/Base.lproj/Main.storyboard
+++ b/BeOnTime-iOSApp/Base.lproj/Main.storyboard
@@ -14,7 +14,6 @@
         <!--BeOnTime Login-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="LoginViewController" title="BeOnTime Login" id="BYZ-38-t0r" customClass="LoginViewController" customModule="BeOnTime_iOSApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -70,6 +69,7 @@
                         <segue destination="Kx2-Qv-Jv1" kind="show" identifier="totest" id="yOi-w7-RFj"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="513.75" y="117.25352112676056"/>
         </scene>
@@ -199,52 +199,68 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="TableView1" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Xwd-ef-HiK">
-                                <rect key="frame" x="0.0" y="317" width="320" height="251"/>
+                                <rect key="frame" x="0.0" y="291" width="320" height="277"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="cell" id="kAR-P2-wfa">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="clientSiftCell" rowHeight="109" id="kAR-P2-wfa" customClass="ClientShiftTableViewCell" customModule="BeOnTime_iOSApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="109"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kAR-P2-wfa" id="HfH-hW-aFg">
-                                            <rect key="frame" x="0.0" y="0.0" width="273" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="273" height="108.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwO-9V-Ovm">
-                                                    <rect key="frame" x="21" y="11" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Company" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwO-9V-Ovm">
+                                                    <rect key="frame" x="15" y="11" width="258" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7uC-JX-dYM">
-                                                    <rect key="frame" x="115" y="10" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7uC-JX-dYM">
+                                                    <rect key="frame" x="15" y="40" width="250" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EQ8-bI-Fia">
-                                                    <rect key="frame" x="201" y="10" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EQ8-bI-Fia">
+                                                    <rect key="frame" x="15" y="64" width="250" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="7uC-JX-dYM" firstAttribute="leading" secondItem="HfH-hW-aFg" secondAttribute="leadingMargin" id="0Il-gv-vET"/>
+                                                <constraint firstItem="7uC-JX-dYM" firstAttribute="trailing" secondItem="HfH-hW-aFg" secondAttribute="trailingMargin" id="3eR-OO-CUR"/>
+                                                <constraint firstItem="jwO-9V-Ovm" firstAttribute="trailing" secondItem="HfH-hW-aFg" secondAttribute="trailingMargin" constant="8" id="6tm-7g-oTa"/>
+                                                <constraint firstItem="jwO-9V-Ovm" firstAttribute="leading" secondItem="HfH-hW-aFg" secondAttribute="leading" constant="15" id="8iA-5I-M8N"/>
+                                                <constraint firstItem="jwO-9V-Ovm" firstAttribute="top" secondItem="HfH-hW-aFg" secondAttribute="topMargin" id="AX0-Kk-a9V"/>
+                                                <constraint firstItem="EQ8-bI-Fia" firstAttribute="top" secondItem="7uC-JX-dYM" secondAttribute="bottom" constant="3" id="AjH-Ot-fQf"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="EQ8-bI-Fia" secondAttribute="bottom" constant="13" id="GXy-uo-tRa"/>
+                                                <constraint firstItem="EQ8-bI-Fia" firstAttribute="leading" secondItem="HfH-hW-aFg" secondAttribute="leadingMargin" id="Kkc-SF-0ZA"/>
+                                                <constraint firstItem="7uC-JX-dYM" firstAttribute="top" secondItem="jwO-9V-Ovm" secondAttribute="bottom" constant="8" id="jZi-4u-qvf"/>
+                                                <constraint firstItem="EQ8-bI-Fia" firstAttribute="trailing" secondItem="HfH-hW-aFg" secondAttribute="trailingMargin" id="l5C-ou-Cus"/>
+                                                <constraint firstItem="EQ8-bI-Fia" firstAttribute="top" secondItem="7uC-JX-dYM" secondAttribute="bottom" constant="3" id="rm9-cm-ng2"/>
+                                                <constraint firstItem="7uC-JX-dYM" firstAttribute="top" secondItem="jwO-9V-Ovm" secondAttribute="bottom" constant="8" id="whq-f4-FLg"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lblEndTime" destination="EQ8-bI-Fia" id="iWH-nI-1kw"/>
+                                            <outlet property="lblName" destination="jwO-9V-Ovm" id="Dpk-Lt-k83"/>
+                                            <outlet property="lblStartTime" destination="7uC-JX-dYM" id="Lpr-yk-uPj"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="End Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Hk-To-1kv">
-                                <rect key="frame" x="15" y="163" width="98" height="21"/>
+                                <rect key="frame" x="19" y="135" width="98" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="4yf-1J-KxF">
-                                <rect key="frame" x="97" y="106" width="190" height="40"/>
+                                <rect key="frame" x="15" y="93" width="289" height="40"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="545943629.14056301">
                                     <!--2018-04-20 19:00:29 +0000-->
@@ -264,34 +280,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pud-hh-1hp">
-                                <rect key="frame" x="15" y="264" width="291" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.4438348052726549" green="0.98132258653640747" blue="0.46242172856635722" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <state key="normal" title="SEARCH SHIFT">
-                                    <color key="titleColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                                </state>
-                                <connections>
-                                    <action selector="btnSearch:" destination="eD8-hk-c7d" eventType="touchUpInside" id="gOi-rz-mQS"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rate for Worker's Shift" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmX-r5-Md3">
-                                <rect key="frame" x="53" y="77" width="242" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="yab-Ma-Wfw">
-                                <rect key="frame" x="97" y="148" width="190" height="51"/>
+                                <rect key="frame" x="16" y="150" width="288" height="51"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="545943629.14056301">
                                     <!--2018-04-20 19:00:29 +0000-->
                                 </date>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLA-hI-wlP">
-                                <rect key="frame" x="229" y="213" width="66" height="30"/>
+                                <rect key="frame" x="230" y="203" width="66" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Re-login">
@@ -302,18 +299,31 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Start Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dfl-xa-deq">
-                                <rect key="frame" x="15" y="116" width="98" height="21"/>
+                                <rect key="frame" x="19" y="71" width="98" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pud-hh-1hp">
+                                <rect key="frame" x="15" y="241" width="291" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.4438348052726549" green="0.98132258653640747" blue="0.46242172856635722" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="SEARCH SHIFT">
+                                    <color key="titleColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="btnSearch:" destination="eD8-hk-c7d" eventType="touchUpInside" id="gOi-rz-mQS"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="ayX-pi-As7"/>
                     </view>
                     <navigationItem key="navigationItem" id="kdM-m7-3kL"/>
                     <connections>
+                        <outlet property="clientShiftView" destination="Xwd-ef-HiK" id="6xn-q3-ZfA"/>
                         <segue destination="NYe-T2-3v5" kind="show" id="TPw-fO-6sO"/>
                     </connections>
                 </viewController>
